DFR-2117: added intervner feature toggle